background image pathed link

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,7 @@
     height: 1000px;
     background-size:cover; 
     background:no-repeat;
-    background-image:url("./images/IMG_8274.JPG");
+    background-image:url("../images/IMG_8274.JPG");
     background-image: fixed;
     background-position:center ;
   }
